# sycl-blas

./: CMakeLists.txt
bench/: CMakeLists.txt  benchmark.hpp  clblas_benchmark.cpp  clblast_benchmark.cpp  clwrap.hpp  syclblas_benchmark.cpp
include/executors/: blas1_tree_executor.hpp  blas_packet_traits.hpp  blas_packet_traits_sycl.hpp  executor_base.hpp  executor_sycl.hpp
include/interface/: blas1_interface_sycl.hpp  blas3_interface_sycl_gemm.hpp
include/operations/: blas1_trees.hpp  blas2_trees.hpp  blas3_trees.hpp  blas3_trees_gemm.hpp  blas_constants.hpp  blas_operators.hpp
test/: CMakeLists.txt  blas1_rand_asum_test.cpp  blas1_rand_axpy_test.cpp  blas1_rand_copy_test.cpp  blas1_rand_dot_test.cpp  blas1_rand_imax_test.cpp  blas1_rand_imin_test.cpp  blas1_rand_nrm2_test.cpp  blas1_rand_swap_test.cpp  blas1_rand_test.hpp  blas1_simple_axpy.cpp  blas1_test.hpp  main.cpp
test/exprtest/: blas1_iface_test.cpp  blas_interface_test.hpp
test/unittest/: CMakeLists.txt  blas1_asum_test.cpp  blas1_axpy_test.cpp  blas1_copy_test.cpp  blas1_dot_test.cpp  blas1_iamax_test.cpp  blas1_iamin_test.cpp  blas1_imax_test.cpp  blas1_imin_test.cpp  blas1_nrm2_test.cpp  blas1_rand_asum_test.cpp  blas1_rand_axpy_test.cpp  blas1_rand_copy_test.cpp  blas1_rand_dot_test.cpp  blas1_rand_imax_test.cpp  blas1_rand_imin_test.cpp  blas1_rand_nrm2_test.cpp  blas1_rand_swap_test.cpp  blas1_rand_test.hpp  blas1_rotg_test.cpp  blas1_scal_test.cpp  blas1_simple_asum_tests.cpp  blas1_simple_axpy.cpp  blas1_simple_axpy_tests.cpp  blas1_simple_dot_tests.cpp  blas1_simple_nrm2_tests.cpp  blas1_simple_test.hpp  blas1_swap_test.cpp  main.cpp
tests/: CMakeLists.txt  blas1_interface_test.cpp  gemm_utils.hpp  paper_blas1_test.cpp  simple_axpy_test.cpp
